--- a/Front-end/main.css
+++ b/Front-end/main.css
@@ -13,15 +13,8 @@ nav {
     align-items: center;
     width: 100%;
     min-height: 8vh;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 1%;
     background-color: #f2f2f2;
-}
-
-nav a {
-    flex-grow: 1;
-    text-decoration: none;
-    font-size: 1.5em;
 }
 
 .loginContainer {
@@ -29,6 +22,16 @@ nav a {
     justify-content: space-between;
     align-items: center;
     width: 20%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+}
+
+nav button {
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 0.5em 1em;
 }
 
 li {
