--- a/Front-end/main.css
+++ b/Front-end/main.css
@@ -7,6 +7,12 @@
     font-family: 'Nunito Sans', sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    flex-flow: column wrap;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -38,8 +44,17 @@ li {
     list-style: none;
 }
 
-/* Change the color of the link on hover */
-nav a:hover {
-    background-color: #ddd; /* Set the background color */
-    color: black; /* Set the text color */
+#patientLoginContainer {
+    position: fixed;
+    display: none;
+    top: 25%;
+    width: 50%;
+    height: 50%;
+    align-self: center;
+    justify-content: center;
+    background-color: aliceblue;
+}
+
+form {
+    align-self: center;
 }
