--- a/Front-end/main.css
+++ b/Front-end/main.css
@@ -7,12 +7,6 @@
     font-family: 'Nunito Sans', sans-serif;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    flex-flow: column wrap;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -44,17 +38,15 @@ li {
     list-style: none;
 }
 
-#patientLoginContainer {
-    position: fixed;
-    display: none;
-    top: 25%;
-    width: 50%;
-    height: 50%;
-    align-self: center;
-    justify-content: center;
-    background-color: aliceblue;
+/* Change the color of the link on hover */
+nav a:hover {
+    background-color: #ddd; /* Set the background color */
+    color: black; /* Set the text color */
 }
 
-form {
-    align-self: center;
+.homeback{
+    background: url("https://runwayhealth.ca/wp-content/uploads/2021/07/Physiotherapy-for-the-knee.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
