--- a/Front-end/templates/login.html
+++ b/Front-end/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='main.css')}}">
     <title>Login</title>
 </head>
 <body>
@@ -14,7 +14,11 @@
 
     <center>
         <h3>Login Here: </h3><br>
-        <form action="/authenticate" method="POST">
+        <form action="{{url_for('login') }}" method="POST">
+            {% if msg is defined and msg!="" %}
+            <label>{{msg}}</label>
+            {% endif %}
+            <br/>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br><br>
             
@@ -23,7 +27,7 @@
             
             <input type="submit" value="Login">
         </form><br>
-        <p>If you are not a user, <a href="/signup">Sign Up</a> here.</p>
+        <p>If you are not a user, <a href="{{url_for('register')}}">Sign Up</a> here.</p>
     </center>
 </body>
 </html>
